--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -657,7 +657,7 @@
             if (item.cube && item.action !== 'double') {
                 const doubleCube = window[`Double${item.cube}`];
                 if (doubleCube) {
-                    ctx.drawImage(doubleCube, 0, 400 - 50, 100, 100);
+                    ctx.drawImage(doubleCube, 0, 350, 100, 100);
                 }
             }
 
