--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -653,9 +653,18 @@
                 if (diceSet[d2]) ctx.drawImage(diceSet[d2], diceX2, diceY, 60, 60);
             }
 
-            // Draw double cube if not double action
-            if (item.cube && item.action !== 'double') {
-                const doubleCube = window[`Double${item.cube}`];
+            // Draw double cube until double action
+            let cubeValue = 1;
+            for (let i = 0; i < data.length; i++) {
+                if (data[i].action === 'double') {
+                    break;
+                }
+                if (data[i].cube) {
+                    cubeValue = data[i].cube;
+                }
+            }
+            if (cubeValue > 1) {
+                const doubleCube = window[`Double${cubeValue}`];
                 if (doubleCube) {
                     ctx.drawImage(doubleCube, 0, 350, 100, 100);
                 }
