--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -660,8 +660,8 @@
                 if (diceSet[d2]) ctx.drawImage(diceSet[d2], diceX2, diceY, 60, 60);
                 }
     
-                // Показывать Double64 только на ходу с удвоением
-                if (turn === doubleTurnIndex) {
+                // Показывать Double64 до хода с удвоением включительно
+                if (turn <= doubleTurnIndex) {
                     ctx.drawImage(Double64, 375, 350, 50, 50);
                 }
 
