--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -664,7 +664,7 @@
                 }
     
 
-                if (turn <= firstDoubleIndex) {
+                if (turn < firstDoubleIndex) {
                     ctx.drawImage(Double64, 375, 350, 50, 50);
                 }
 
