--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -695,7 +695,7 @@
                             ctx.fillStyle = '#ffffff';
                             ctx.font = 'bold 20px Arial';
                             ctx.textAlign = 'center';
-                            ctx.fillText(item.action === 'take' ? 'Take' : 'Pass', 375, cubeX);
+                            ctx.fillText(item.action === 'take' ? 'Take' : 'Pass', cubeX, 400);
                         }
                         break; 
                     }
