--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -707,7 +707,7 @@
                 }
                 let info = '';
                 let prefix = (turn > 0 && data[turn - 1].action === 'take') ? 'Takes ' : '';
-                console.log(turn > 0? data[turn - 1].action === 'take' : 'N/A', 'Prefix:', prefix);
+                console.log((turn > 0) ? 'Previous action:' + data[turn - 1].action : 'No previous turn');
                 if (item.action === 'double') {
                     info =`<strong>Действие:</strong> Double (${item.cube})`;
                 } else if (item.action === 'win') {
